gccida/c0/cselib_lookup
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:1341:36: error: must use 'enum' tag to refer to type 'machine_mode'
cselib_val * cselib_lookup( rtx x, machine_mode mode, int create) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:1417:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:1418:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:1427:45: error: use of undeclared identifier 'machine_mode'
e = new_cselib_val( ++next_unknown_value, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:1427:60: error: expected expression
e = new_cselib_val( ++next_unknown_value, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:1439:28: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
*htab_find_slot_with_hash( hash_table_0, x, e->value, INSERT) = e; 
                           ^~~~~~~~~~~~
                           hash_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:1452:14: error: expected identifier or '('
 struct htab = hash_table_0; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/cselib.c:1454:56: error: use of undeclared identifier 'insert_option'
slot = htab_find_slot_with_hash( htab, v10, hashval, ( insert_option)( create != 0)); 
                                                       ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_lookup/src/obj/cselib.o] Error 1
